# viccva_status_updater_rust

./: Cargo.toml  README.md
src/: main.rs
